<resources>
    <string name="app_name">惠付券管家</string>
    <string name="app_short_version">1</string>
    <string name="app_full_version">APP_VERSION_FULL</string>
    <string name="func_desc_reset">重置密码</string>
    <string name="func_desc_register">账号激活</string>
    <string name="baidu_map_key">hWmjb239Btfi6ksj4pZFSqZTCfUMpLE6</string>
    <string name="umeng_key">5a5eabfba40fa344800000a4</string>
    <string name="phonenum">+86</string>
    <string name="hint_input_phonenum">请输入手机号</string>
    <string name="identify_code">验证码</string>
    <string name="identify_phone">手机号</string>
    <string name="hint_input_indentify_code">请输入验证码</string>
    <string name="send_identify_code">发送验证码</string>
    <string name="pwd_reset">"密码    "</string>
    <string name="hint_input_pwd">请输入密码</string>
    <string name="confirm">确认</string>
    <string name="reset">重置</string>
    <string name="scan_text">将二维码放入框内，即可自动扫描</string>
    <string name="myhome_abouthui">关于惠付券</string>
    <string name="jaoyi_succ">交易成功</string>
    <string name="mobilenbr_error">手机号码格式不正确</string>
    <string name="min_isfirst">首单立减  ：</string>
    <string name="scaninput_error">请输入金额</string>
    <string name="tv_username">账号</string>
    <string name="tv_password">密码</string>
    <string name="edt_hint_input_username">手机号码</string>
    <string name="edt_hint_input_password">密码</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="remember_pwd">自动登录</string>
    <string name="btn_login">确定</string>
    <string name="btn_register">注册</string>
    <string name="describtion_of_shopcard">商家会员卡图片</string>
    <string name="login_title">账号激活</string>
    <string name="login_settled">我要入驻</string>
    <string name="shop_act_num">(活动</string>
    <string name="shop_act_num_end">)</string>
    <string name="shop_no_settled">该商户还未入驻</string>
    <string name="shop_go_settled">去入驻</string>
    <string name="tel_null">电话号码为空</string>
    <string name="message_sound">消息提醒声音</string>
    <string name="coupon_message">接受惠付券推送消息</string>
    <string name="clear_cache">清除缓存</string>
    <string name="exit_sign">退出登录</string>
    <string name="cue">温馨提示</string>
    <string name="voucher_content">设置0元需谨慎，代金券在消费时当现金使用!</string>
    <string name="continue_modify">现在修改</string>
    <string name="continue_setting">继续设置</string>
    <string name="quit_ok">您确定要退出吗?</string>
    <string name="quit_delete">您确定要删除?</string>
    <string name="clear_ok">您确定要清除所有的缓存数据吗?</string>
    <string name="ok">确定</string>
    <string name="clear">清除</string>
    <string name="no">取消</string>
    <string name="set">设置</string>
    <string name="accept_pay_msg">接收支付短信</string>
    <string name="dialog_tel">您确定拨打电话？</string>
    <string name="accept_icbc_bank">您当前还没受理建行卡，暂时不能发行此种优惠券</string>
    <string name="settled_shop">去开店</string>
    <string name="settled_phone">联系惠付券：400-04-95588</string>
    <string name="settled_mobile_nbr">tel:400-04-95588</string>
    <string name="shopinfo_shop">店铺名称</string>
    <string name="shopinfo_tel">联系电话</string>
    <string name="shopinfo_starttiem">营业开始时间</string>
    <string name="shopinfo_endtiem">营业结束时间</string>
    <string name="shopinfo_address">店铺地址</string>
    <string name="shopinfo_phone">手机号码</string>
    <string name="shopinfo_apply">提交申请</string>
    <string name="shopinfo_detail">开店申请成功后，将会有惠付券的工作人员上门注册签约</string>
    <string name="shopinfo_back">返回登录页</string>
    <string name="shopinfo_home">返回首页</string>
    <string name="shopinfo_data">填写内容不能为空</string>
    <string name="reset_pwd">密码重置</string>
    <string name="syswechat_weixin">微信公众号</string>
    <string name="huiquan_message">给惠付券留言</string>
    <string name="main">首页</string>
    <string name="card_home">惠员卡</string>
    <string name="receivables">收款</string>
    <string name="card_home_">会员卡</string>
    <string name="coupon_home">优惠券</string>
    <string name="my_home">我的</string>
    <string name="mainact_shopname">店铺名称</string>
    <string name="marker_act">营销活动</string>
    <string name="post_accntstat">惠付券账本</string>
    <string name="my_order">我的订单</string>
    <string name="my_cashier">收银台</string>
    <string name="many_shop">周边商家</string>
    <string name="activies_shop">活动商家:</string>
    <string name="cooperate_shop">合作商家:</string>
    <string name="among_shop">其中商家:</string>
    <string name="home">家,</string>
    <string name="home_among">家</string>
    <string name="myhome_tel">tel:400-04-95588</string>
    <string name="user_tel">tel:</string>
    <string name="tv_home_class">开班</string>
    <string name="tv_home_recruitstudents">招生启示</string>
    <string name="tv_home_course">课程表</string>
    <string name="tv_home_honorwall">荣誉墙</string>
    <string name="tv_home_mingshitang">名师堂</string>
    <string name="tv_home_principal">校长之语</string>
    <string name="tv_home_studentstart">学员之星</string>
    <string name="tv_home_parentcomment">家长点评</string>
    <string name="tv_home_studentsignup">学员报名</string>
    <string name="register_title">商户注册</string>
    <string name="tv_business_licence">营业执照</string>
    <string name="edt_hint_input_business_licence">请输入营业执照</string>
    <string name="chb_obey">遵守</string>
    <string name="tv_baomi_terms">《惠付券商户注册协议》</string>
    <string name="tv_register_icbc">中国建设银行股份有限公司浙江省分行</string>
    <string name="tv_register_xinli">艾体威尔电子技术（北京）有限公司</string>
    <string name="tv_register_huiquan">联合打造一流互惠互利圈子平台</string>
    <string name="business_terms_title">惠付券商圈协议</string>
    <string name="myhome_cue">温馨提示</string>
    <string name="myhome_quit_ok">退出当前账号</string>
    <string name="myhome_ok">确定</string>
    <string name="myhome_no">取消</string>
    <string name="myhome_set">设置</string>
    <string name="shop_message">商铺信息</string>
    <string name="shop_editorial">装修</string>
    <string name="head_message">头像信息</string>
    <string name="shop_shortname">店铺简称</string>
    <string name="shop_logo">商家头像</string>
    <string name="shop_name">店铺名称</string>
    <string name="delivery">外卖点餐</string>
    <string name="tablenum_manager">桌号管理</string>
    <string name="restaurant_set">餐厅设置</string>
    <string name="can_reserve">堂食点餐</string>
    <string name="contact_number">联系电话</string>
    <string name="manager_number">店长号码</string>
    <string name="set_phoneortime">设置</string>
    <string name="business_hours">营业时间</string>
    <string name="delivery_program">配送方案</string>
    <string name="shop_address">店铺地址</string>
    <string name="reach">至</string>
    <string name="raise">提出</string>
    <string name="image_shop">店铺形象</string>
    <string name="my_twocode">我的二维码</string>
    <string name="code_fail">查询失败!!</string>
    <string name="dialog_noDine">您的商铺还没有上架的商品,请在电脑端的惠付券管家里完成产品上传</string>
    <string name="diaolog_title">取消</string>
    <string name="update_succ">修改成功，请重新登录</string>
    <string name="update_fail">修改失败</string>
	<string name="predetermined_list">预定名单</string>
	<string name="share_friend">分享给好友</string>
	<string name="activity_verification">活动验证</string>
	<string name="activity_edit">编辑活动</string>
	<string name="activity_del">删除活动</string>
	<string name="activity_not_exist">活动不存在</string>
	<string name="activity_events_unalterable">活动现在状态不可变更</string>
	<string name="activity_no_change">活动状态没有变化</string>
	<string name="new_activity">新建活动</string>
	<string name="input_act_phonenumorvervode">请输入验证码/手机号</string>
    <string name="my_account_number">员工账号:</string>
    <string name="my_part">角色:</string>
    <string name="my_part_type">老板店长类</string>
    <string name="assistant_account_number">员工账号</string>
    <string name="assistant_name">员工姓名</string>
    <string name="staff_name">员工姓名:</string>
    <string name="assistant_update">店长编辑</string>
    <string name="assistant_del">删除</string>
    <string name="assistant_type">员工类</string>
    <string name="mystaff_add">添加店长</string>
    <string name="mystaff_update">修改</string>
    <string name="del_ok">亲，确定要删除吗</string>
    <string name="del_number">的账号</string>
    <string name="num_inputtype">请输入手机号码</string>
    <string name="num_one">1</string>
    <string name="name_inputtype">请输入姓名</string>
    <string name="del_success">删除数据成功！！！</string>
    <string name="del_file">删除数据失败！！！</string>
    <string name="upp_success">修改数据成功！！！</string>
    <string name="upp_file">修改数据失败！！！</string>
    <string name="add_success">添加数据成功！！！</string>
    <string name="num_type">账号角色</string>
    <string name="add_file">添加数据失败！！！</string>
    <string name="format_problem">输入的账号格式不正确</string>
    <string name="select_type">请选择类别</string>
    <string name="num_nocontent">请输入账号</string>
    <string name="name_nocontent">请输入姓名</string>
    <string name="mobilenbr_used">手机号已经被使用!</string>
    <string name="add_fail">添加失败了!!</string>
    <string name="kindly_reminder">温馨提示</string>
    <string name="set_fail">设置失败</string>
    <string name="upp_pwd">为了您的账号安全,修改密码前请填写原密码</string>
    <string name="input_pwd">密码:</string>
    <string name="tv_forget_pwd">已将验证短信发到该账号手机</string>
    <string name="tv_validate_pwd">将验证短信发到该账号手机</string>
    <string name="input_msg_pwd">请输入短信验证码</string>
    <string name="new_pwd">新密码:</string>
    <string name="input_newpwd">请输入新密码</string>
    <string name="pwd_fit">新密码与原密码一致</string>
    <string name="input_originalpwd">请输入原密码</string>
    <string name="validate_originalpwd">验证原密码</string>
    <string name="input_originalpwd_error">原密码输入错误,请点击忘记密码找回密码</string>
    <string name="input_validate_error">验证码输入错误</string>
    <string name="title_forget_pwd">忘记密码</string>
    <string name="title_update_pwd">修改密码</string>
    <string name="original_pwd">原密码：</string>
    <string name="update_business_time">营业时间</string>
    <string name="shop_dec">店铺装修</string>
    <string name="shop_intro">店铺简介</string>
    <string name="shop_introduction">店铺介绍</string>
    <string name="person_submit">编辑</string>
    <string name="submit">提交</string>
    <string name="edit_picture">点击编辑店面形象图片</string>
    <string name="publicity_pictures">店铺宣传图片(最多6张)</string>
    <string name="tv_addall">提交</string>
    <string name="tv_add">添加</string>
    <string name="tv_album_photo">新建相册</string>
    <string name="tv_upp_albumphoto">修改相册名称</string>
    <string name="finish">完成</string>
    <string name="no_photoname">请输入相册名称</string>
    <string name="photoname_biglength">您输入的相册名称过长</string>
    <string name="no_product_name">请输入产品名称</string>
    <string name="product_title_long">您输入的产品名字过长</string>
    <string name="tv_couponuse_handle">按办卡时间排序</string>
    <string name="tv_couponusr_date">按消费时间排序</string>
    <string name="tv_couponusr_money">按消费金额排序</string>
    <string name="tv_couponusr_time">按消费次数排序</string>
    <string name="tv_couponuse">使用优惠券：</string>
    <string name="tv_couponddt">抵扣总额：</string>
    <string name="card_code">卡编码：</string>
    <string name="card_type">卡的类型：</string>
    <string name="card_create_time">创建时间：</string>
    <string name="card_status">卡状态：</string>
    <string name="tv_coupon_batch_title">发放优惠券批次</string>
    <string name="tv_coupon_ddt_money_title">共抵扣金额</string>
    <string name="tv_coupon_ddt_money_yuan">元</string>
    <string name="tv_coupon_csm_money_title">带来消费金额</string>
    <string name="tv_coupon_csm_p_title">带来消费人次</string>
    <string name="tv_coupon_uncsm_title">当前未使用优惠券</string>
    <string name="tv_coupon_uncsm_zhang">张</string>
    <string name="monday">一</string>
    <string name="thuesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="sunday">日</string>
   <string name="tv_name">姓&#160;&#160;&#160;名</string>
   <string name="tv_name_hint">请输入员工姓名</string>
   <string name="tv_tel_no">手机号</string>
   <string name="tv_tel_hint">请输入员工的手机号</string>
   <string name="tv_codes">验证码</string>
   <string name="tv_codes_hint">请输入收到的验证码</string>
   <string name="message_code">获取验证码</string>
</resources>