<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assistant_account_number" />

        <EditText
            android:id="@+id/et_assistant_account_number"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/sel_edt_input"
            android:gravity="center"
            android:hint="@string/num_inputtype"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assistant_name" />

        <EditText
            android:id="@+id/et_assistant_name"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/sel_edt_input"
            android:gravity="center"
            android:hint="@string/name_inputtype"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/my_part" />

        <RadioGroup
            android:id="@+id/rg_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rbtn_assistant_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assistant_type" />

            <RadioButton
                android:id="@+id/rbtn_my_part_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_part_type" />
        </RadioGroup>

        <TextView
            android:id="@+id/mystaff_add"
            android:layout_width="85dp"
            android:layout_height="35dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/mystaff_add" />
    </LinearLayout>

</LinearLayout>