<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LyOutSet" >

    <include layout="@layout/common_title_commit" />
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="@dimen/layout_height"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@color/white">
        <TextView 
            android:id="@+id/tv_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:text="@string/tv_name"/>
        <EditText 
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/tv_name_title"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:textSize="16sp"
            android:hint="@string/tv_name_hint"/>
    </RelativeLayout>
    <TextView style="@style/VLine"/>
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="@dimen/layout_height"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@color/white">
        <TextView 
            android:id="@+id/tv_tel_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:text="@string/tv_tel_no"/>
        <EditText 
            android:id="@+id/tv_tel_no"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/tv_tel_title"
            android:layout_toLeftOf="@+id/btn_register_send"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"
            android:background="@null"
            android:hint="@string/tv_tel_hint"/>
        <TextView
            android:id="@+id/tv_register_send"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_code"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:gravity="center"
            android:textSize="12sp"
            android:text="@string/message_code"/>
    </RelativeLayout>
    <TextView style="@style/VLine"/>
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="@dimen/layout_height"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@color/white">
        <TextView 
            android:id="@+id/tv_code_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:text="@string/tv_codes"/>
        <EditText 
            android:id="@+id/tv_code_no"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/tv_code_title"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"
            android:background="@null"
            android:hint="@string/tv_codes_hint"/>
    </RelativeLayout>
</LinearLayout>