<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/cn.suanzi.baomi.shop.view"
    xmlns:app1="http://schemas.android.com/apk/res/cn.hft.huifq.shop"
    style="@style/LyOutSet" >

    <include layout="@layout/common_title_home" />
    
    <RelativeLayout
        android:id="@id/panelContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/main_year_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:drawablePadding="7dp"
                android:textColor="#000000"
                android:textSize="20dp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/week"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/title"
            android:background="@color/white"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sunday"
                android:textColor="@color/calendar_font" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/monday"
                android:textColor="@color/home_topsixfont" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/thuesday"
                android:textColor="@color/home_topsixfont" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wednesday"
                android:textColor="@color/home_topsixfont" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/thursday"
                android:textColor="@color/home_topsixfont" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/friday"
                android:textColor="@color/home_topsixfont" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/saturday"
                android:textColor="@color/calendar_font" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/main_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/week" >

            <com.huift.hfq.shop.view.MyViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scrollbars="none" >
            </com.huift.hfq.shop.view.MyViewPager>

            <TextView
                android:id="@+id/main_frame_shader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center"
                android:textColor="@color/home_topsixfont"
                android:textSize="20dp" />
        </FrameLayout>
    </RelativeLayout>

    <!-- </cn.suanzi.baomi.shop.view.Panel> -->

</LinearLayout>