<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LyOutSet" >

    <LinearLayout
        style="@style/LyWHSecond"
        android:background="@drawable/queybg"
        android:orientation="vertical" >

        <LinearLayout
            style="@style/LyWHSecond"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical" >

            <LinearLayout
                style="@style/LyWHSecond"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/query_nosel"
                    android:gravity="center" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_order_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sel_cardquery"
                android:gravity="center"
                android:text="@string/tv_couponuse_handle"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_order_csm_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sel_cardquery"
                android:gravity="center"
                android:text="@string/tv_couponusr_date"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_order_csm_money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sel_cardquery"
                android:gravity="center"
                android:text="@string/tv_couponusr_money"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_order_csm_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sel_cardquery"
                android:gravity="center"
                android:text="@string/tv_couponusr_time"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>